--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "codecov": "^3.5.0",
+    "fs-extra": "^8.0.1",
     "jest": "^24.8.0",
     "jest-junit": "^6.4.0",
     "rollup": "^1.12.1",
