--- a/package.json
+++ b/package.json
@@ -24,12 +24,6 @@
   "module": "dist/namespace-aliaser.mjs",
   "esm5": "dist/namespace-aliaser.esm5.js",
   "typings": "index.d.ts",
-  "scripts": {
-    "build": "rollup --config ./rollup.config.js",
-    "clean": "node ./build/clean",
-    "lint": "tslint --project .",
-    "test": "jest"
-  },
   "dependencies": {
     "tslib": "^1.10.0"
   },
@@ -37,8 +31,10 @@
     "@types/jest": "^24.0.15",
     "codecov": "^3.5.0",
     "fs-extra": "^8.1.0",
+    "gh-pages": "^2.0.1",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^1.17.0",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -46,6 +42,18 @@
     "rollup-plugin-typescript2": "^0.22.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
+    "typedoc": "^0.15.0",
+    "typedoc-plugin-external-module-name": "^2.1.0",
     "typescript": "^3.5.3"
+  },
+  "scripts": {
+    "build": "rollup --config ./rollup.config.js",
+    "clean": "node ./build/clean",
+    "doc": "typedoc",
+    "doc:gh-pages": "gh-pages --dist target/typedoc --dotfiles",
+    "doc:ci": "node ./build/doc-ci",
+    "doc:publish": "run-s doc doc:ci \"doc:gh-pages {@}\" --",
+    "lint": "tslint --project .",
+    "test": "jest"
   }
 }
