--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "namespace-aliaser",
+  "name": "@proc7ts/namespace-aliaser",
   "version": "2.0.3",
   "description": "Unique namespace aliases for XML, HTML, and CSS names",
   "keywords": [
@@ -10,39 +10,40 @@
     "library",
     "typescript"
   ],
-  "homepage": "https://github.com/surol/namespace-aliaser",
+  "homepage": "https://github.com/proc7ts/namespace-aliaser",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/surol/namespace-aliaser.git"
+    "url": "ssh://git@github.com:proc7ts/namespace-aliaser.git"
   },
   "license": "MIT",
   "author": "Ruslan Lopatin <ruslan.lopatin@gmail.com>",
   "bugs": {
-    "url": "https://github.com/surol/namespace-aliaser/issues"
+    "url": "https://github.com/proc7ts/namespace-aliaser/issues"
   },
   "main": "dist/namespace-aliaser.js",
   "module": "dist/namespace-aliaser.mjs",
   "typings": "index.d.ts",
   "devDependencies": {
+    "@proc7ts/eslint-config": "^1.0.3",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
-    "@surol/eslint-config": "^1.0.3",
     "@types/jest": "^25.1.4",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
     "codecov": "^3.6.5",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.8.2",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.0.0",
     "gh-pages": "^2.2.0",
     "jest": "^25.1.0",
     "jest-junit": "^10.0.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.0.6",
+    "rollup": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-typescript2": "^0.26.0",
-    "ts-jest": "^25.2.1",
-    "typedoc": "^0.16.11",
+    "ts-jest": "25.2.0",
+    "tslib": "^1.11.1",
+    "typedoc": "^0.17.1",
     "typedoc-plugin-external-module-name": "^3.0.0",
     "typescript": "^3.8.3"
   },
