--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "bugs": {
     "url": "https://github.com/proc7ts/namespace-aliaser/issues"
   },
-  "main": "dist/namespace-aliaser.js",
-  "module": "dist/namespace-aliaser.mjs",
+  "type": "module",
+  "main": "dist/namespace-aliaser.cjs",
+  "module": "dist/namespace-aliaser.js",
   "types": "index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/namespace-aliaser.mjs",
-      "require": "./dist/namespace-aliaser.js"
+      "import": "./dist/namespace-aliaser.js",
+      "require": "./dist/namespace-aliaser.cjs"
     }
   },
   "devDependencies": {
