--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
     "url": "https://github.com/proc7ts/namespace-aliaser/issues"
   },
   "type": "module",
-  "main": "dist/namespace-aliaser.cjs",
-  "module": "dist/namespace-aliaser.js",
-  "types": "index.d.ts",
+  "main": "./dist/namespace-aliaser.cjs",
+  "module": "./dist/namespace-aliaser.js",
+  "types": "./index.d.ts",
   "exports": {
-    ".": {
-      "import": "./dist/namespace-aliaser.js",
-      "require": "./dist/namespace-aliaser.cjs"
-    }
+    "import": "./dist/namespace-aliaser.js",
+    "require": "./dist/namespace-aliaser.cjs"
   },
   "devDependencies": {
     "@proc7ts/eslint-config": "^2.0.5",
@@ -37,6 +35,7 @@
     "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.7.0",
+    "@wessberg/rollup-plugin-ts": "^1.3.8",
     "codecov": "^3.8.1",
     "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.3",
@@ -45,7 +44,6 @@
     "jest-junit": "^12.0.0",
     "rollup": "^2.33.3",
     "rollup-plugin-sourcemaps": "^0.6.3",
-    "rollup-plugin-typescript2": "^0.29.0",
     "run-z": "^1.6.1",
     "shx": "^0.3.3",
     "ts-jest": "^26.4.4",
@@ -58,7 +56,7 @@
     "all": "run-z build,lint,test",
     "build": "run-z +z --then rollup --config ./rollup.config.js",
     "ci:all": "run-z all +test/--ci/--runInBand",
-    "clean": "run-z +z --then shx rm -rf d.ts dist target",
+    "clean": "run-z +z --then shx rm -rf index.d.ts dist target",
     "doc": "run-z +z --then typedoc",
     "doc:publish": "run-z doc --then gh-pages --dist target/typedoc --dotfiles",
     "lint": "run-z +z --then eslint . --ext .js,.ts",
