--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
   "main": "./dist/namespace-aliaser.js",
   "types": "./index.d.ts",
   "exports": "./dist/namespace-aliaser.js",
+  "dependencies": {
+    "@proc7ts/context-values": "^7.0.0-dev.13"
+  },
   "devDependencies": {
     "@jest/globals": "^27.0.6",
+    "@proc7ts/context-builder": "^7.0.0-dev.13",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@run-z/eslint-config": "^1.3.0",
+    "@run-z/rollup-helpers": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
