--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@frontmeans/namespace-aliaser",
-  "version": "2.6.0-dev.0",
+  "version": "2.6.0",
   "description": "Unique namespace aliases for XML, HTML, and CSS names",
   "keywords": [
     "namespace",
