--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "types": "./index.d.ts",
   "exports": "./dist/namespace-aliaser.js",
   "dependencies": {
-    "@proc7ts/context-values": "^7.0.0-dev.13"
+    "@proc7ts/context-values": "^7.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^27.0.6",
-    "@proc7ts/context-builder": "^7.0.0-dev.13",
+    "@proc7ts/context-builder": "^7.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@run-z/eslint-config": "^1.3.0",
     "@run-z/rollup-helpers": "^1.1.1",
