--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,11 @@
     "importHelpers": true,
     "importsNotUsedAsValues": "error",
     "noEmitHelpers": true,
-    "lib": [
-      "ES2019"
-    ],
+    "lib": ["ES2019"],
     "types": [],
     "outDir": "target/js",
     "sourceMap": true,
     "newLine": "LF"
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
